# minecraft-status

./: .gitignore  .swiftlint.yml  CHANGELOG.md  LICENSE  Mintfile  PRIVACY_POLICY.md  README.md  RELEASE.md  SETUP.md  rust-toolchain
.github/workflows/: rust-audit.yml  rust-ci.yml  swift-ci.yml
rust/: .rust-toolchain  Cargo.toml
rust/src/: identicon.rs  lib.rs  mcping_common.rs  week_stats.rs
rust/src/tests/: mod.rs
swift/: .swiftformat  McpingWidget.entitlements  Mintfile  generate-rust-lib.sh
swift/McpingWidget.xcodeproj/: project.pbxproj
swift/McpingWidget.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
swift/McpingWidgetViewExtension/: Info.plist  McpingWidgetViewExtension.intentdefinition  McpingWidgetViewExtension.swift  PreviewData.swift
swift/MinecraftStatus/: McStructs.swift  MinecraftStatusApp.swift  SettingsView.swift
swift/MinecraftStatus.xcodeproj/: project.pbxproj
swift/MinecraftStatus.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
swift/MinecraftStatusCommon/: LayeredBarGraph.swift  MinecraftStatusCommon.h
swift/MinecraftStatusLib/: Minecraft-Status-Bridging-Header.h
swift/MinecraftStatusTests/: MinecraftStatusTests.swift
swift/MinecraftStatusUITests/: MinecraftStatusUITests.swift
swift/MinecraftStatusWidgetViewExtension/: GraphWidgetView.swift  Info.plist  MinecraftStatusWidgetViewExtension.swift  PreviewData.swift
swift/mcping-widget/: ContentView.swift  Info.plist  McStructs.swift  McpingWidgetApp.swift  SettingsView.swift
swift/mcping-widget-lib/: mcping-widget-Bridging-Header.h
swift/mcping-widgetTests/: McpingWidgetTests.swift
swift/mcping-widgetUITests/: McpingWidgetUITests.swift
swift/scripts/: bootstrap.sh  generate-rust-lib.sh  swiftformat.sh  swiftlint.sh
(+9 files in other folders)
