[package]
name = "mcping-widget"
version = "0.1.0"
authors = ["Cldfire"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["lib", "staticlib"]

[dependencies]
mcping = { git = "https://github.com/Scetch/mcping.git" }
anyhow = "1.0"
serde = "1.0"
serde_json = "1.0"
expect-test = "1.1"
identicon-rs = "2.0.2"
base64 = "0.13"
image = "0.23"

[dev-dependencies]
tempfile = "3.2"

[features]
# enables tests that require an internet connection
online = []
